fixed twitter card img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -165,10 +165,6 @@ h2 {
     align-items: center;
 
     width: 20%;
-    padding-top: 10px; 
-    padding-right: 0px;
-    padding-bottom: 10px; 
-    padding-left: 10px;
 
     border: 0px;
     border-top: 1px;
